--- a/apps/shop/src/app/components/categories/category-filter-mobile/category-filter-mobile.component.html
+++ b/apps/shop/src/app/components/categories/category-filter-mobile/category-filter-mobile.component.html
@@ -3,7 +3,8 @@
 
       Off-canvas filters for mobile, show/hide based on off-canvas filters state.
     -->
-<div class="relative z-40 lg:hidden" role="dialog" aria-modal="true">
+<!-- prettier-ignore -->
+<div class="relative z-40" [ngClass]="{ 'hidden': toggle }" role="dialog" aria-modal="true">
   <!--
         Off-canvas menu backdrop, show/hide based on off-canvas menu state.
     
@@ -34,6 +35,7 @@
       <div class="flex items-center justify-between px-4">
         <h2 class="text-lg font-medium text-gray-900">Filters</h2>
         <button
+        (click)="toggleFilter()"
           type="button"
           class="-mr-2 flex h-10 w-10 items-center justify-center rounded-md bg-white p-2 text-gray-400"
         >
