--- a/apps/shop/src/app/pages/home/home.component.html
+++ b/apps/shop/src/app/pages/home/home.component.html
@@ -18,6 +18,7 @@
               icon="pi pi-filter"
               styleClass="bg-black border-black p-button-sm mt-7"
               size="small"
+              (onClick)="trigger()"
             ></p-button>
           </div>
           <div
