--- a/apps/shop/src/app/shared/header/header.component.html
+++ b/apps/shop/src/app/shared/header/header.component.html
@@ -45,9 +45,13 @@
         </div>
       </div>
       <div class="flex items-center">
-        <p>
-          <i class="pi pi-shopping-cart" style="font-size: 1.5rem"></i>
-        </p>
+        <i
+          class="pi pi-shopping-cart mr-4 p-text-secondary"
+          pBadge
+          style="font-size: 1.5rem"
+          [value]="cartCount"
+          severity="danger"
+        ></i>
       </div>
     </div>
   </div>
